# MOVMetaEdit

./: .travis.yml  History_CLI.txt  History_GUI.txt  LICENSE  License.html  README.md
.github/workflows/: MOVMetaEdit_Checks.yml
Project/GNU/: PKGBUILD  movmetaedit.dsc  movmetaedit.spec
Project/GNU/CLI/: AddThisToRoot_CLI_compile.sh  Makefile.am  configure.ac
Project/GNU/CLI/test/: test.sh  test1.md5sums  test1.txt  test10.md5sums  test10.txt  test2.md5sums  test2.txt  test3.md5sums  test3.txt  test4.md5sums  test4.txt  test5.md5sums  test5.txt  test6.md5sums  test6.txt  test7.md5sums  test7.txt  test8.md5sums  test8.txt  test9.md5sums  test9.txt
Project/MSVC2013/: movedit.sln  movedit.vcxproj  movedit.vcxproj.filters
Project/MSVC2015/: MOVMetaEdit.sln  movedit.sln  movedit.vcxproj  movedit.vcxproj.filters
Project/MSVC2015/CLI/: MOVMetaEdit_CLI.vcxproj  MOVMetaEdit_CLI.vcxproj.filters
Project/MSVC2015/GUI/: MOVMetaEdit_GUI.vcxproj  MOVMetaEdit_GUI.vcxproj.filters  Pre-Build.bat
Project/MSVC2017/: MOVMetaEdit.sln
Project/MSVC2017/CLI/: MOVMetaEdit_CLI.vcxproj
Project/MSVC2017/GUI/: MOVMetaEdit_GUI.vcxproj
Project/MSVC2022/: MOVMetaEdit.sln
Project/MSVC2022/CLI/: MOVMetaEdit_CLI.vcxproj
Project/MSVC2022/GUI/: MOVMetaEdit_GUI.vcxproj  Post-Build.bat
Project/Mac/: BR_extension_CLI.sh  Info.plist  Logo_White.icns  Osascript_GUI.sh  mkdmg.sh
Project/OBS/: deb7.dsc
Project/OBS/deb7.debian/: control  copyright  movmetaedit-gui.dirs  movmetaedit-gui.install  rules
Project/Qt/: AddThisToRoot_GUI_compile.sh  MOVMetaEdit.pro  MOVMetaEdit.rc  movmetaedit-gui.desktop  movmetaedit-gui.kde3.desktop  movmetaedit-gui.kde4.desktop  movmetaedit-gui.metainfo.xml  movmetaedit-gui.pro  movmetaedit-gui.rc  prepare
Source/: movedit_atomread.cpp  movedit_atomread.h  movedit_main.cpp  movedit_structure.cpp  movedit_structure.h
Source/CLI/: Config.h  Help.cpp  Help.h
Source/Common/: AdID.cpp  AdID.h  Mac_Helpers.h  Mac_Helpers.mm  config.h  mp4_Base.cpp  mp4_Base.h  mp4_Base_parsing.cpp  mp4_Handler.cpp  mp4_Handler.h
Source/Common/mp4/: mp4_.cpp  mp4_.h  mp4_free.cpp  mp4_mdat.cpp  mp4_moov.cpp  mp4_moov_meta.cpp  mp4_moov_meta_hdlr.cpp  mp4_moov_meta_ilst.cpp  mp4_moov_meta_keys.cpp  mp4_moov_trak.cpp  mp4_moov_trak_mdia.cpp  mp4_moov_trak_mdia_mdhd.cpp  mp4_moov_trak_mdia_minf.cpp  mp4_moov_trak_mdia_minf_gmhd.cpp  mp4_moov_trak_mdia_minf_gmhd_tmcd.cpp  mp4_moov_trak_mdia_minf_smhd.cpp  mp4_moov_trak_mdia_minf_stbl.cpp  mp4_moov_trak_mdia_minf_stbl_stsd.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxxSound.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxxUnknown.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxxVideo.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_chan.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_clap.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_clli.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_colr.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_fiel.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_gama.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_mdcv.cpp  mp4_moov_trak_mdia_minf_stbl_stsd_xxxx_pasp.cpp  mp4_moov_trak_mdia_minf_vmhd.cpp  mp4_moov_trak_tapt.cpp  mp4_moov_trak_tapt_xxxx.cpp  mp4_moov_trak_tkhd.cpp  mp4_moov_trak_tref.cpp  mp4_moov_trak_tref_tmcd.cpp
Source/GUI/Qt/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  channeldialog.cpp  channeldialog.h  channeldialog.ui  chantablewidget.cpp  chantablewidget.h  config.h  core.cpp  core.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablewidget.cpp  tablewidget.h  techtablewidget.cpp  techtablewidget.h
Source/Install/: MOV_MetaEdit_GUI_Windows_i386.nsi  MOV_MetaEdit_GUI_Windows_x64.nsi
Source/Resource/: Resource.qrc
Source/Resource/Documentation/: Contact.html  Description.html  Technical.html  UniversalAdID.html  index.html  interface.html
Source/Resource/Image/: Icon.icns
Source/ZenLib/: Dir.cpp  File.cpp  Thread.cpp  Ztring.cpp
debian/: changelog  control  copyright  movmetaedit-gui.dirs  movmetaedit-gui.install  movmetaedit.dirs  movmetaedit.install  rules
